tests/build/widget_new/malformed_property_path1.stderr
error: expected `when` or a property path
 --> $DIR/malformed_property_path1.rs:5:9
  |
5 |         _ = 0;
  |         ^
